# CSC340-project

./: CMakeLists.txt  Chef.cpp  Chef.h  ChineseCuisine.txt  Customer.cpp  Customer.h  JapaneseCuisine  LICENSE  Menu.cpp  Menu.h  Person.cpp  Person.h  README.md  Restaurant.cpp  Restaurant.h  linkedlist.cpp  linkedlist.h  linkedlist_cpp.txt  linkedlist_h.txt  main.cpp  node.cpp  node.h  node_cpp.txt  node_h.txt
